feat: implement database support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "mini-message-board",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node --watch app.js",
+    "initializedb": "node db/initializedb.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "pg": "^8.13.0"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.10"
   }
 }
